<resources>
    <!-- Baisic info about App-->
    <string name="app_name" translatable="false">Lemur</string>
    <string name="tomek_mail" translatable="false">tomaboro96@gmail.com</string>
    <string name="krzysiek_mail" translatable="false">krzysztof.swider@hotmail.com</string>

    <!-- List of NavigationView elements -->
    <string name="ld_tests">Tests</string>
    <string name="ld_readers_tests">Readers</string>
    <string name="ld_actions_tests">Actions</string>
    <string name="ld_other_tests">Others</string>
    <string name="ld_myScripts">My Scripts</string>
    <string name="ld_IEScripts">Import/Export Scripts</string>\
    <string name="ld_others">Others</string>
    <string name="ld_Settings">Set App Permissions</string>
    <string name="ld_AboutApp">About App</string>
    <string name="ld_RateApp">Rate App</string>

    <!--Actions Tests -->
    <string name="at_silent">Silend Mode</string>
    <string name="at_vibration">Vibration Mode</string>
    <string name="at_normal">Normal Mode</string>
    <string name="at_SendNotify">Send test Notify</string>
    <string name="at_SendNotifyExtended">Send Notify</string>
    <string name="at_turnOnWiFi">Turn On WiFi</string>
    <string name="at_turnOffWiFi">Turn Off WiFi</string>
    <string name="at_turnOnMobileData">Turn On Mobile Data</string>
    <string name="at_turnOffMobileData">Turn Off Mobile Data</string>
    <string name="at_turnOnBluetooth">Turn On Bluetooth</string>
    <string name="at_sendSMS">Send test SMS</string>
    <string name="at_sendSMSExtended">Send SMS</string>
    <string name="at_turnOffBluetooth">Turn Off BlueTooth</string>
    <!-- Readers Tests-->
    <string name="rt_time">Read Time</string>
    <string name="rt_location">Read Location</string>

    <!--Other Tests-->
    <string name="ot_startService" translatable="false">Start Service</string>
    <string name="ot_stopService" translatable="false">Stop Service</string>
    <string name="ot_runHEART">Run models</string>
    <string name="ot_scheduleHEART">Run models in one minute</string>
    <string name="ot_scheduleHEART5">Run models in every one minute</string>

    <!--Automaticcaly created-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--About App-->
    <string name="AppVersion" translatable="false">Lemur v1.0</string>
    <string name="AppWarning">This is the dev version of the App. Release version is still in progress.</string>
    <string name="AppInfos">This App was created by Tomasz Borowicz and Krzysztof Swider as the final project for objective programming.</string>
    <string name="AppLogoInfos">App Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></string>

    <!--EditScript-->
    <string name="es_Save">Save</string>
    <string name="es_Script">Script</string>
    <string name="es_Added">Script Added successfully</string>
    <string name="es_SetTime">Set Time</string>
    <string name="es_SetTime1">Set Start Time</string>
    <string name="es_SetTime2">Set Stop Time</string>
    <string name="es_SetDate">Set Date</string>
    <string name="es_SetDay">Set Day</string>
    <string name="es_SetRepeating">Set Repeating</string>
    <string name="es_SetLocation">Set Location</string>
    <string name="es_SetAction">Set Action</string>
    <string name="es_notSelected">----</string>
    <string name="es_enterScriptTitle">Enter script name</string>
    <string name="es_SetName">Set script name</string>
    <string name="es_AddCycle">Add repeating</string>
    <string name="es_AddSingleDate">Add single</string>
    <string name="es_AddTime">Add time</string>
    <string name="es_AddLocation">Add location</string>
    <string name="es_AddAction">Add action</string>
    <string name="es_AddInterval">Add time division</string>
    <string name="es_WrongInterval">This is not a proper time interval</string>
    <string name="es_BloutoothError">You have already added some bluetooth action</string>
    <string name="es_WiFiError">You have already added some WiFi action</string>
    <string name="es_SoundError">You have already added some sound action</string>
    <string name="es_NameError">Your script needs a name</string>
    <string name="es_EmptyScriptError1">You need to add some actions to the script</string>
    <string name="es_EmptyScriptError2">You need to add some conditions to the script</string>
    <string name="es_Everyday">Everyday</string>
    <string name="es_Info">Info</string>
    <string name="es_InfoTitle">How does it works?</string>
    <string name="es_InfoMess">The script runs actions specified by you if at one of chosen dates at one of chosen times you are in one of chosen locations.\n\nIf you haven\'t chosen any locations script will run at specified time no matter where you are. Similar situation takes place if you haven\'t chosen any time.\n\n The minimum script contains title, one time or location and one action. </string>
    <string name="es_EmptyScriptError3">You need to specify time</string>

    <!--Time Picker-->
    <string name="tp_cancel">Cancel</string>
    <string name="tp_ok" translatable="false">OK</string>
    <string name="tp_setTime">Set Time</string>

    <!--DayOfWeekPicker-->
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string-array name="days">
        <item>@string/mon</item>
        <item>@string/tue</item>
        <item>@string/wed</item>
        <item>@string/thu</item>
        <item>@string/fri</item>
        <item>@string/sat</item>
        <item>@string/sun</item>
    </string-array>
    <string-array name="days_short">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <!--ImportExportFragment-->
    <string name="ie_instruction">Export/Import models to the memory available for user in directory Android/data/pl/kit/context_aware/lemur/files/models. These models are deleted when you uninstall application.</string>
    <string name="ie_import" translatable="false">Import</string>
    <string name="ie_export">Export</string>

    <!--Permission Lack-->
    <string name="pl_err">Error</string>
    <string name="pl_fine_location">App doesnt have permission to use your location</string>
    <string name="pl_write_external">App doesnt have permission to write in external storage</string>
    <string name="pl_read_contacts">App doesnt have permission to read contacts from your phone book</string>
    <string name="pl_send_sms">App doesnt have permission to send SMS</string>

    <!--ActionPickerFragment-->
    <string name="action_1">Turn off bluetooth</string>
    <string name="action_2">Turn on bluetooth</string>
    <string name="action_3">Turn off wifi</string>
    <string name="action_4">Turn on wifi</string>
    <string name="action_5">Turn off sounds</string>
    <string name="action_6">Turn on sounds</string>
    <string name="action_7">Turn on vibration</string>
    <string name="action_8">Send notification</string>
    <string name="action_9">Send SMS</string>
    <string-array name="actions">
        <item>@string/action_1</item>
        <item>@string/action_2</item>
        <item>@string/action_3</item>
        <item>@string/action_4</item>
        <item>@string/action_5</item>
        <item>@string/action_6</item>
        <item>@string/action_7</item>
        <item>@string/action_8</item>
        <item>@string/action_9</item>
    </string-array>

    <!-- SMS Details Fragment -->
    <string name="sms_phoneNo">Phone Number:</string>
    <string name="sms_message">Message:</string>
    <string name="sms_fragmentTitle">SMS Details</string>
    <string name="sms_phone_book">Phone Book</string>

    <!-- Notification Details Fragment -->
    <string name="noti_title">Title</string>
    <string name="noti_message">Message</string>
    <string name="noti_fragmentTitle">Notification Details</string>

    <string name="ds_delete_1">Do you want delete</string>
    <string name="ds_delete_2">script</string>
    <string name="exported">Scripts Exported</string>
    <string name="imported">Scripts Imported</string>
    <string name="tmp_message_sub">Where is your chair?!</string>
    <string name="tmp_message_main">Message from Chriss</string>
    <string name="schedulde_1">Start alarm in</string>
    <string name="schedulde_2">seconds</string>
    <string name="default_message_main">Lemur sends you notification</string>
    <string name="default_message_sub">You have something to do!</string>
    <string name="choose_scripts">Choose Scripts</string>

    <!--MainForegroundService -->
    <string name="mfs_main">Lemur</string>
    <string name="mfs_sub">Lemur is working in a background</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="other_tests_ld">Others</string>
    <string name="readers_tests_ld">Readers</string>
    <string name="actions_tests_ld">Actions</string>
    <string name="tests_ld">Tests</string>
    <string name="title_activity_edit_script">Script</string>
    <string name="title_activity_location_picker">Map</string>
</resources>
