<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.kit.context_aware.lemur.ActionsTests">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:text="@string/at_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/VibrationButton"
                android:layout_below="@+id/SilentButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:onClick="VibrationButtonOnClick"/>

            <Button
                android:text="@string/at_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/VibrationButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:id="@+id/NormalRingButton"
                android:onClick="NormalRingButtonOnClick"/>

            <Button
                android:text="@string/at_SendNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/NormalRingButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/NotificationButton"
                android:onClick="NotificationButtonOnClick"/>

            <Button
                android:text="@string/at_SendNotifyExtended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/NotificationButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:id="@+id/NotificationExtendedButton"
                android:onClick="NotificationExtendedButtonOnClick"/>

            <Button
                android:text="@string/at_silent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SilentButton"
                android:layout_marginTop="5dp"
                android:onClick="SilentButtonOnClick"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <Button
                android:text="@string/at_turnOnWiFi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/NotificationExtendedButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/TurnOnWiFiButton"
                android:onClick="TurnOnWiFiButtonOnClick"/>

            <Button
                android:text="@string/at_turnOffWiFi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TurnOnWiFiButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:id="@+id/TurnOffWiFiButton"
                android:onClick="TurnOffWiFiButtonOnClick"/>

            <Button
                android:text="@string/at_turnOnBluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TurnOffWiFiButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/TurnOnBluetoothButton"
                android:onClick="TurnOnBluetoothButtonOnClick"/>

            <Button
                android:text="@string/at_turnOffBluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TurnOnBluetoothButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:id="@+id/TurnOffBluetoothButton"
                android:onClick="TurnOffBluetoothButtonOnClick"/>

            <Button
                android:text="@string/at_sendSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TurnOffBluetoothButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/SendSMS"
                android:onClick="SendSMSOnClick" />

            <Button
                android:text="@string/at_sendSMSExtended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SendSMS"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:id="@+id/SendSMSExtended"
                android:onClick="SendSMSExtendedOnClick" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
