<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/okienko"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="pl.kit.context_aware.lemur.activities.EditScript"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/edit_script_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:id="@+id/tmptmptmp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/es_SetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/es_set_tiitle_main"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/es_enterScriptTitle"
                android:ems="10"
                android:id="@+id/es_set_tiitle_sub" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />


            <TextView
                android:text="@string/es_SetRepeating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_set_day_repeating_main"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_repeating_days" />

            <Button
                android:text="@string/es_AddCycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_add_cycle"
                android:onClick="SetDayOnClick"
                tools:ignore="ButtonStyle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:text="@string/es_SetDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_set_day_main"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_lv_days"/>

            <Button
                android:text="@string/es_AddSingleDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_add_single_date"
                android:onClick="SetDateOnClick"
                tools:ignore="ButtonStyle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:text="@string/es_SetTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_set_time_main"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="NestedScrolling"
                android:id="@+id/es_lv_time"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/es_AddTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/es_add_time"
                    android:onClick="SetTimeOnClick"
                    android:layout_weight="1"/>

                <Button
                    android:text="@string/es_AddInterval"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/es_add_interval"
                    android:onClick="SetTimeIntervalOnClick"
                    android:layout_weight="1"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

            <TextView
                android:text="@string/es_SetLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/es_set_location_main"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="NestedScrolling"
                android:id="@+id/es_lv_location"/>

            <Button
                android:id="@+id/es_add_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:longClickable="true"
                android:onClick="SetLocationOnClick"
                android:text="@string/es_AddLocation" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>


            <TextView
                android:text="@string/es_SetAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/es_set_action_main"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="NestedScrolling"
                android:id="@+id/es_lv_actions"/>

            <Button
                android:text="@string/es_AddAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_add_action"
                android:onClick="SetActionOnClick"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
