<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/es_SetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/es_set_tiitle_main"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/es_enterScriptTitle"
                android:ems="10"
                android:id="@+id/es_set_tiitle_sub" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
            android:text="@string/es_SetDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/es_set_day_main"
            android:textSize="20sp"
            android:textStyle="bold"
                android:layout_weight="1" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedScrolling" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/es_AddCycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/es_add_cycle"
                    android:layout_weight="1"
                    android:onClick="SetDayOnClick"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:text="@string/es_AddSingleDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/es_add_single_date"
                    android:layout_weight="1"
                    android:onClick="SetDateOnClick"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/es_SetTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_set_time_main"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="NestedScrolling" />

            <Button
                android:text="@string/es_AddTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_add_time"
                android:onClick="SetTimeOnClick"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0" />

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:text="@string/es_SetLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/es_set_location_main"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="NestedScrolling" />

        <Button
            android:text="@string/es_AddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/es_add_location"
            android:onClick="SetLocationOnClick"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                    android:text="@string/es_SetAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/es_set_action_main"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="NestedScrolling" />

            <Button
                android:text="@string/es_AddAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/es_add_action"
                android:onClick="SetActionOnClick"/>

        </LinearLayout>
        <TextView
            android:text="@string/es_notSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/es_set_time_sub"
            android:textSize="15sp"/>

        <TextView
            android:text="@string/es_notSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/es_set_day_sub"
            android:textSize="15sp"/>

        <TextView
            android:text="@string/es_notSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/es_set_location_sub"
            android:textSize="15sp"/>

        <TextView
            android:text="@string/es_notSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/es_set_action_sub"
            android:textSize="15sp"/>


    </LinearLayout>
</ScrollView>