<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.kit.context_aware.lemur.AboutApp">

    <TextView
        android:text="@string/AppVersion"
        android:id="@+id/AppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <TextView
        android:text="@string/AppWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppVersion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/AppWarning"
        android:textAlignment="center"
        android:textColor="#ff0033"/>

    <TextView
        android:text="@string/AppInfos"
        android:id="@+id/AppInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppWarning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAlignment="center"/>

</RelativeLayout>
